--- a/ThikanaClassified/ThikanaClassified/ThikanaClassified.csproj
+++ b/ThikanaClassified/ThikanaClassified/ThikanaClassified.csproj
@@ -112,8 +112,12 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="XtrWebTools">
+      <HintPath>F:\XtrWebTools.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DatabaseModels\Authentication.cs" />
     <Compile Include="DatabaseModels\Category.cs" />
     <Compile Include="DatabaseModels\ClassifiedDbContext.cs" />
@@ -141,12 +145,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
